--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -2,4 +2,4 @@ FROM almalinux:9
 LABEL COURSE="DevOps" \
       TRANER="Devi" \
       DURATION="120HRS"
-       com.joindevops.dockerfile.author="santhoshid36@gmail.com"
+       com.joindevops.dockerfile.author="siva@joindevops.com"
