--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 LABEL COURSE="DevOps" \
       TRANER="Devi" \
-      DURATION="120HRS"
-      com.Devi-036.dockerfiles.author="Devi"
+      DURATION="120HRS" \
+      com.Devi-036.dockerfiles.author="santhoshid36@gmail.com"
